--- a/helm/ffc-sfi-payment-responses/values.yaml
+++ b/helm/ffc-sfi-payment-responses/values.yaml
@@ -1,8 +1,8 @@
 environment: development
-name: ffc-template-node
-namespace: ffc-demo
-workstream: ffc-demo
-image: ffc-template-node
+name: ffc-sfi-payment-responses
+namespace: ffc-sfi
+workstream: ffc-sfi
+image: ffc-sfi-payment-responses
 
 labels: {}
 
@@ -10,10 +10,10 @@ appInsights:
   key:
 
 containerConfigMap:
-  name: ffc-template-node-config-map
+  name: ffc-sfi-payment-responses-config-map
 
 containerSecret:
-  name: ffc-template-node-container-secret
+  name: ffc-sfi-payment-responses-container-secret
   type: Opaque
 
 deployment:
