--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -4,11 +4,11 @@ version: '3.8'
 # to provide dependencies and expose ports for local testing
 
 services:
-  ffc-template-node:
+  ffc-sfi-payment-responses:
     build:
       target: development
-    image: ffc-template-node-development
-    container_name: ffc-template-node-development
+    image: ffc-sfi-payment-responses-development
+    container_name: ffc-sfi-payment-responses-development
     ports:
       - "3000:3000"
       - "9229:9229"
