--- a/helm/ffc-sfi-payment-responses/Chart.yaml
+++ b/helm/ffc-sfi-payment-responses/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-description: description-of-project-goes-here
-name: ffc-template-node
+description: FFC SFI payment response processing
+name: ffc-sfi-payment-responses
 # this version is automatically updated in the build pipline
 version: 1.0.0
 dependencies:
