--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ffc-template-node",
-  "version": "0.1.0",
-  "description": "description-of-project-goes-here",
-  "homepage": "https://github.com/DEFRA/ffc-template-node",
+  "name": "ffc-sfi-payment-responses",
+  "version": "0.2.0",
+  "description": "FFC SFI payment response processing",
+  "homepage": "https://github.com/DEFRA/ffc-sfi-payment-responses",
   "main": "app/index.js",
   "scripts": {
     "pretest": "npm run test:lint",
