--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,19 @@ services:
       target: production
     image: ffc-sfi-payment-responses
     container_name: ffc-sfi-payment-responses
+    depends_on: 
+      - ffc-sfi-payment-responses-azurite
     environment:
       APPINSIGHTS_CLOUDROLE: ffc-sfi-payment-responses-local
       APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
+      MESSAGE_QUEUE_HOST: ${MESSAGE_QUEUE_HOST:-notset}
+      MESSAGE_QUEUE_PASSWORD: ${MESSAGE_QUEUE_PASSWORD:-notset}
+      MESSAGE_QUEUE_USER: ${MESSAGE_QUEUE_USER:-notset}
+      ACKNOWLEDGEMENT_TOPIC_ADDRESS: ${ACKNOWLEDGEMENT_TOPIC_ADDRESS:-notset}
+      RETURN_TOPIC_ADDRESS: ${RETURN_TOPIC_ADDRESS:-notset}
+      AZURE_STORAGE_ACCOUNT_NAME: ${AZURE_STORAGE_ACCOUNT_NAME:-devstoreaccount1}
+      AZURE_STORAGE_USE_CONNECTION_STRING: "true"
+
+  ffc-sfi-payment-responses-azurite:
+    image: mcr.microsoft.com/azure-storage/azurite
+    command: "azurite-blob --loose --blobHost 0.0.0.0"
