--- a/helm/ffc-sfi-payment-responses/templates/config-map.yaml
+++ b/helm/ffc-sfi-payment-responses/templates/config-map.yaml
@@ -2,6 +2,14 @@
 {{- define "ffc-sfi-payment-responses.config-map" -}}
 data:
   NODE_ENV: {{ quote .Values.environment }}
-  PORT: {{ quote .Values.container.port }}
   APPINSIGHTS_CLOUDROLE: {{ quote .Values.name }}
+  MESSAGE_QUEUE_HOST: {{ quote .Values.container.messageQueueHost }}
+  ACKNOWLEDGEMENT_TOPIC_ADDRESS: {{ quote .Values.container.acknowledgementTopicAddress }}
+  RETURN_TOPIC_ADDRESS: {{ quote .Values.container.returnTopicAddress }}
+  AZURE_STORAGE_ACCOUNT_NAME: {{ quote .Values.container.azureStorageAccountName }}
+  AZURE_STORAGE_CONNECTION_STRING: {{ quote .Values.container.azureStorageConnectionString }}
+  AZURE_STORAGE_USE_CONNECTION_STRING: {{ quote .Values.container.azureStorageUseConnectionString }}
+  AZURE_STORAGE_INBOUND: {{ quote .Values.container.inboundContainer }}
+  AZURE_STORAGE_ARCHIVE: {{ quote .Values.container.archiveContainer }}
+  AZURE_STORAGE_QUARANTINE: {{ quote .Values.container.quarantineContainer }}
 {{- end -}}
