--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@azure/identity": "^1.3.0",
     "@azure/storage-blob": "^12.7.0",
     "applicationinsights": "^1.8.2",
-    "ffc-messaging": "^2.3.0"
+    "ffc-messaging": "^2.3.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "jest": "^27.0.6",
