--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@azure/storage-blob": "^12.7.0",
     "applicationinsights": "^1.8.2",
     "ffc-messaging": "^2.3.0",
+    "moment": "^2.29.1",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
