--- a/helm/ffc-sfi-payment-responses/values.yaml
+++ b/helm/ffc-sfi-payment-responses/values.yaml
@@ -4,7 +4,8 @@ namespace: ffc-sfi
 workstream: ffc-sfi
 image: ffc-sfi-payment-responses
 
-labels: {}
+labels:
+  component: service
 
 appInsights:
   key:
@@ -26,20 +27,20 @@ container:
   imagePullPolicy: IfNotPresent
   requestMemory: 10Mi
   requestCpu: 10m
-  limitMemory: 40Mi
-  limitCpu: 40m
-  port: 3000
+  limitMemory: 180Mi
+  limitCpu: 120m
+  messageQueueHost: namespace.servicebus.windows.net
+  acknowledgementTopicAddress: ffc-sfi-payment-acknowledgement
+  returnTopicAddress: ffc-sfi-payment-return
+  azureStorageAccountName: sfipayments
+  azureStorageConnectionString: dummy
+  azureStorageUseConnectionString: false
+  inboundContainer: payment-responses-inbound
+  archiveContainer: payment-responses-archive
+  quarantineContainer: payment-responses-quarantine
 
-livenessProbe:
-  path: /healthz
-  port: 3000
-  initialDelaySeconds: 10
-  periodSeconds: 10
-  failureThreshold: 3
+aadPodIdentity: true
 
-readinessProbe:
-  path: /healthy
-  port: 3000
-  initialDelaySeconds: 10
-  periodSeconds: 10
-  failureThreshold: 3
+azureIdentity:
+  clientID: not-a-real-clientID
+  resourceID: not-a-real-resourceID
