--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-sfi-payment-responses",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "FFC SFI payment response processing",
   "homepage": "https://github.com/DEFRA/ffc-sfi-payment-responses",
   "main": "app/index.js",
@@ -17,7 +17,12 @@
   "contributors": [],
   "license": "OGL-UK-3.0",
   "dependencies": {
-    "@hapi/hapi": "^20.1.5"
+    "@azure/identity": "^1.3.0",
+    "@azure/storage-blob": "^12.7.0",
+    "applicationinsights": "^1.8.2",
+    "ffc-messaging": "^2.3.0",
+    "moment": "^2.29.1",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "jest": "^27.0.6",
