--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,4 +22,4 @@ services:
 
   ffc-sfi-payment-responses-azurite:
     image: mcr.microsoft.com/azure-storage/azurite
-    command: "azurite-blob --loose --blobHost 0.0.0.0"
+    command: "azurite-blob --skipApiVersionCheck --loose --blobHost 0.0.0.0"
