Update payment helm charts to use namespace

--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -4,20 +4,20 @@ version: '3.8'
 # to provide dependencies and expose ports for local testing
 
 services:
-  ffc-sfi-payment-responses:
+  ffc-pay-responses:
     build:
       target: development
-    image: ffc-sfi-payment-responses-development
-    container_name: ffc-sfi-payment-responses-development
+    image: ffc-pay-responses-development
+    container_name: ffc-pay-responses-development
     ports:
       - "9244:9229"
     volumes:
       - ./app:/home/node/app
       - ./package.json:/home/node/package.json
     environment:
-      AZURE_STORAGE_CONNECTION_STRING: DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://ffc-sfi-payment-responses-azurite:10000/devstoreaccount1;
+      AZURE_STORAGE_CONNECTION_STRING: DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://ffc-pay-responses-azurite:10000/devstoreaccount1;
 
-  ffc-sfi-payment-responses-azurite:
+  ffc-pay-responses-azurite:
     volumes:
       - azurite_data:/data
     ports:
