--- a/docker-compose.test.debug.yaml
+++ b/docker-compose.test.debug.yaml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  ffc-sfi-payment-responses:
+  ffc-pay-responses:
     command: npm run test:debug
     ports:
       - "9243:9229"
