--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,16 @@
 version: '3.8'
 
 services:
-  ffc-sfi-payment-responses:
+  ffc-pay-responses:
     build:
       context: .
       target: production
-    image: ffc-sfi-payment-responses
-    container_name: ffc-sfi-payment-responses
+    image: ffc-pay-responses
+    container_name: ffc-pay-responses
     depends_on:
-      - ffc-sfi-payment-responses-azurite
+      - ffc-pay-responses-azurite
     environment:
-      APPINSIGHTS_CLOUDROLE: ffc-sfi-payment-responses-local
+      APPINSIGHTS_CLOUDROLE: ffc-pay-responses-local
       APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
       MESSAGE_QUEUE_HOST: ${MESSAGE_QUEUE_HOST:-notset}
       MESSAGE_QUEUE_PASSWORD: ${MESSAGE_QUEUE_PASSWORD:-notset}
@@ -20,6 +20,6 @@ services:
       AZURE_STORAGE_ACCOUNT_NAME: ${AZURE_STORAGE_ACCOUNT_NAME:-devstoreaccount1}
       AZURE_STORAGE_USE_CONNECTION_STRING: "true"
 
-  ffc-sfi-payment-responses-azurite:
+  ffc-pay-responses-azurite:
     image: mcr.microsoft.com/azure-storage/azurite
     command: "azurite-blob --skipApiVersionCheck --loose --blobHost 0.0.0.0"
