--- a/helm/ffc-pay-responses/Chart.yaml
+++ b/helm/ffc-pay-responses/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 description: FFC SFI payment response processing
-name: ffc-sfi-payment-responses
+name: ffc-pay-responses
 # this version is automatically updated in the build pipline
 version: 1.0.0
 dependencies:
