--- a/helm/ffc-pay-responses/Chart.yaml
+++ b/helm/ffc-pay-responses/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-description: FFC SFI payment response processing
+description: FFC payment response processing
 name: ffc-pay-responses
 # this version is automatically updated in the build pipline
 version: 1.0.0
