--- a/helm/ffc-pay-responses/values.yaml
+++ b/helm/ffc-pay-responses/values.yaml
@@ -1,7 +1,7 @@
 environment: development
 name: ffc-pay-responses
-namespace: ffc-sfi
-workstream: ffc-sfi
+namespace: ffc-pay
+workstream: ffc-pay
 image: ffc-pay-responses
 
 labels:
@@ -32,7 +32,7 @@ container:
   messageQueueHost: namespace.servicebus.windows.net
   acknowledgementTopicAddress: ffc-pay-acknowledgement
   returnTopicAddress: ffc-pay-return
-  azureStorageAccountName: sfipayments
+  azureStorageAccountName: payments
   azureStorageConnectionString: dummy
   azureStorageUseConnectionString: false
   inboundContainer: payment-responses-inbound
