--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-pay-responses",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "FFC payment response processing",
   "homepage": "https://github.com/DEFRA/ffc-pay-responses",
   "main": "app/index.js",
@@ -24,6 +24,7 @@
     "@azure/storage-blob": "^12.8.0",
     "applicationinsights": "^1.8.2",
     "ffc-messaging": "^2.3.2",
+    "log-timestamp": "^0.3.0",
     "moment": "^2.29.1",
     "xml2js": "^0.4.23"
   },
