Expose blob create container option

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,7 @@ services:
       RETURN_TOPIC_ADDRESS: ${RETURN_TOPIC_ADDRESS:-ffc-pay-return}${MESSAGE_QUEUE_SUFFIX}
       AZURE_STORAGE_ACCOUNT_NAME: ${AZURE_STORAGE_ACCOUNT_NAME:-devstoreaccount1}
       AZURE_STORAGE_USE_CONNECTION_STRING: "true"
+      AZURE_STORAGE_CREATE_CONTAINERS: "true"
 
   ffc-pay-responses-azurite:
     image: mcr.microsoft.com/azure-storage/azurite
