--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,6 @@ services:
       AZURE_STORAGE_USE_CONNECTION_STRING: "true"
       AZURE_STORAGE_CREATE_CONTAINERS: "true"
 
-  ffc-pay-responses-azurite:
+  ffc-pay-azurite:
     image: mcr.microsoft.com/azure-storage/azurite
-    command: "azurite-blob --skipApiVersionCheck --loose --blobHost 0.0.0.0"
+    command: "azurite --blobHost 0.0.0.0 --queueHost 0.0.0.0 --tableHost 0.0.0.0 --loose"
