--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-pay-responses",
-  "version": "1.3.16",
+  "version": "1.3.17",
   "description": "FFC payment response processing",
   "homepage": "https://github.com/DEFRA/ffc-pay-responses",
   "main": "app/index.js",
@@ -21,20 +21,20 @@
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
-    "@azure/identity": "^2.0.0",
-    "@azure/storage-blob": "^12.8.0",
-    "applicationinsights": "^1.8.2",
-    "ffc-messaging": "^2.4.2",
-    "ffc-pay-event-publisher": "^1.1.4",
-    "log-timestamp": "^0.3.0",
-    "moment": "^2.29.1",
-    "xml2js": "^0.4.23"
+    "@azure/identity": "2.0.0",
+    "@azure/storage-blob": "12.8.0",
+    "applicationinsights": "1.8.2",
+    "ffc-messaging": "2.4.2",
+    "ffc-pay-event-publisher": "1.1.4",
+    "log-timestamp": "0.3.0",
+    "moment": "2.29.4",
+    "xml2js": "0.4.23"
   },
   "devDependencies": {
-    "jest": "^27.3.1",
-    "jest-junit": "^13.0.0",
-    "nodemon": "^2.0.14",
-    "standard": "^16.0.4"
+    "jest": "27.3.1",
+    "jest-junit": "13.0.0",
+    "nodemon": "2.0.20",
+    "standard": "16.0.4"
   },
   "standard": {
     "globals": [
