--- a/helm/ffc-pay-responses/Chart.yaml
+++ b/helm/ffc-pay-responses/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
 description: FFC payment response processing
 name: ffc-pay-responses
-# this version is automatically updated in the build pipline
+# this version is automatically updated in the build pipeline
 version: 1.0.0
 dependencies:
 - name: ffc-helm-library
-  version: ^2.11.0
+  version: 3.4.0
   repository: https://raw.githubusercontent.com/defra/ffc-helm-repository/master/
