--- a/helm/ffc-pay-responses/values.yaml
+++ b/helm/ffc-pay-responses/values.yaml
@@ -1,8 +1,7 @@
-environment: development
+environment: production
 environmentCode:
 name: ffc-pay-responses
 namespace: ffc-pay
-workstream: ffc-pay
 image: ffc-pay-responses
 
 labels:
@@ -18,14 +17,9 @@ containerSecret:
   name: ffc-pay-responses-container-secret
   type: Opaque
 
-deployment:
-  restartPolicy: Always
-  priorityClassName: default
-  replicas: 1
-  minReadySeconds: 0
+deployment: {}
 
 container:
-  imagePullPolicy: Always
   requestMemory: 10Mi
   requestCpu: 10m
   limitMemory: 180Mi
