--- a/helm/ffc-pay-responses/values.yaml
+++ b/helm/ffc-pay-responses/values.yaml
@@ -17,7 +17,7 @@ containerSecret:
   name: ffc-pay-responses-container-secret
   type: Opaque
 
-deployment:
+deployment: {}
 
 container:
   requestMemory: 10Mi
