--- a/helm/ffc-pay-responses/values.yaml
+++ b/helm/ffc-pay-responses/values.yaml
@@ -2,6 +2,7 @@ environment: production
 environmentCode:
 name: ffc-pay-responses
 namespace: ffc-pay
+workstream: ffc-pay
 image: ffc-pay-responses
 
 labels:
