--- a/docs/asyncapi.yaml
+++ b/docs/asyncapi.yaml
@@ -1,13 +1,13 @@
-asyncapi: 2.2.0
+asyncapi: 2.5.0
 info:
   title: FFC Pay Responses
   version: '1.0.0'
 channels:
-  response/acknowledgement:
+  ffc-pay-acknowledgement:
     publish:
       message:
         $ref: '#/components/messages/Acknowledgement'
-  response/return:
+  ffc-pay-return:
     publish:
       message:
         $ref: '#/components/messages/Return'
