Add quarantine event

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
       ACKNOWLEDGEMENT_TOPIC_ADDRESS: ${ACKNOWLEDGEMENT_TOPIC_ADDRESS:-ffc-pay-acknowledgement}${MESSAGE_QUEUE_SUFFIX}
       RETURN_TOPIC_ADDRESS: ${RETURN_TOPIC_ADDRESS:-ffc-pay-return}${MESSAGE_QUEUE_SUFFIX}
       EVENT_TOPIC_ADDRESS: ${EVENT_TOPIC_ADDRESS:-ffc-pay-event}${MESSAGE_QUEUE_SUFFIX}
+      EVENTS_TOPIC_ADDRESS: ${EVENTS_TOPIC_ADDRESS:-ffc-pay-events}${MESSAGE_QUEUE_SUFFIX}
       AZURE_STORAGE_ACCOUNT_NAME: ${AZURE_STORAGE_ACCOUNT_NAME:-devstoreaccount1}
       AZURE_STORAGE_USE_CONNECTION_STRING: "true"
       AZURE_STORAGE_CREATE_CONTAINERS: "true"
