--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "author": "Defra",
   "contributors": [
-    "John Watson john.watson2@rpa.gov.uk",
+    "John Watson john.watson1@defra.gov.uk",
     "Steve Dickinson steve.dickinson@defra.gov.uk",
     "Marc Templeton m.templeton@kainos.com"
   ],
