--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-pay-responses",
-  "version": "1.7.0",
+  "version": "1.7.1",
   "description": "FFC payment response processing",
   "homepage": "https://github.com/DEFRA/ffc-pay-responses",
   "main": "app/index.js",
@@ -15,7 +15,7 @@
   },
   "author": "Defra",
   "contributors": [
-    "John Watson john.watson2@rpa.gov.uk",
+    "John Watson john.watson1@defra.gov.uk",
     "Steve Dickinson steve.dickinson@defra.gov.uk",
     "Marc Templeton m.templeton@kainos.com"
   ],
