--- a/helm/ffc-pay-responses/templates/config-map.yaml
+++ b/helm/ffc-pay-responses/templates/config-map.yaml
@@ -24,4 +24,8 @@ data:
   AZURE_STORAGE_ARCHIVE: {{ quote .Values.container.archiveFolder }}
   AZURE_STORAGE_QUARANTINE: {{ quote .Values.container.quarantineFolder }}
   USE_V2_EVENTS: {{ quote .Values.container.useV2Events }}
+  POSTGRES_DB: {{ quote .Values.postgresService.postgresDb }}
+  POSTGRES_HOST: {{ quote .Values.postgresService.postgresqlHost }}
+  POSTGRES_PORT: {{ quote .Values.postgresService.postgresPort }}
+  POSTGRES_SCHEMA_NAME: {{ quote .Values.postgresService.postgresSchema }}
 {{- end -}}
