--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,18 @@ services:
       AZURE_STORAGE_ACCOUNT_NAME: ${AZURE_STORAGE_ACCOUNT_NAME:-devstoreaccount1}
       AZURE_STORAGE_USE_CONNECTION_STRING: "true"
       AZURE_STORAGE_CREATE_CONTAINERS: "true"
+      POSTGRES_DB: ffc_pay_responses
+      POSTGRES_HOST: ${POSTGRES_HOST:-ffc-pay-responses-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_SCHEMA_PASSWORD:-ppp}
+      POSTGRES_PORT: 5432
+      POSTGRES_SCHEMA_NAME: ${POSTGRES_SCHEMA_NAME:-public}
+
+  ffc-pay-responses-postgres:
+    image: postgres:11.4-alpine
+    environment:
+      POSTGRES_DB: ffc_pay_responses
+      POSTGRES_PASSWORD: ppp
+      POSTGRES_USERNAME: postgres
 
   ffc-pay-responses-azurite:
     image: mcr.microsoft.com/azure-storage/azurite:3.17.1
