--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "ffc-pay-event-publisher": "1.2.0",
     "log-timestamp": "0.3.0",
     "moment": "2.29.4",
+    "pg": "8.7.3",
+    "pg-hstore": "2.3.4",
+    "sequelize": "6.29.3",
     "xml2js": "0.6.0"
   },
   "devDependencies": {
     "jest": "27.3.1",
     "jest-junit": "13.0.0",
-    "nodemon": "2.0.20",
+    "nodemon": "3.0.1",
     "standard": "16.0.4"
   },
   "standard": {
