--- a/helm/ffc-pay-responses/values.yaml
+++ b/helm/ffc-pay-responses/values.yaml
@@ -38,6 +38,7 @@ container:
   inboundFolder: inbound
   archiveFolder: archive
   quarantineFolder: quarantine
+  returnFolder: return
   useV2Events: true
 
 postgresService:
