--- a/helm/ffc-pay-responses/templates/config-map.yaml
+++ b/helm/ffc-pay-responses/templates/config-map.yaml
@@ -23,6 +23,7 @@ data:
   AZURE_STORAGE_INBOUND: {{ quote .Values.container.inboundFolder }}
   AZURE_STORAGE_ARCHIVE: {{ quote .Values.container.archiveFolder }}
   AZURE_STORAGE_QUARANTINE: {{ quote .Values.container.quarantineFolder }}
+  AZURE_STORAGE_RETURN: {{ quote .Values.container.returnFolder }}
   USE_V2_EVENTS: {{ quote .Values.container.useV2Events }}
   POSTGRES_DB: {{ quote .Values.postgresService.postgresDb }}
   POSTGRES_HOST: {{ quote .Values.postgresService.postgresqlHost }}
