--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-pay-responses",
-  "version": "1.9.0",
+  "version": "1.9.1",
   "description": "FFC payment response processing",
   "homepage": "https://github.com/DEFRA/ffc-pay-responses",
   "main": "app/index.js",
@@ -18,7 +18,8 @@
     "John Watson john.watson1@defra.gov.uk",
     "Steve Dickinson steve.dickinson@defra.gov.uk",
     "Marc Templeton m.templeton@kainos.com",
-    "Kirsten Williamson kirsten.williamson@kainos.com"
+    "Kirsten Williamson kirsten.williamson@kainos.com",
+    "Sam Plackett samuel.plackett@eviden.com"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
