--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,3 +39,5 @@ services:
   ffc-pay-responses-azurite:
     image: mcr.microsoft.com/azure-storage/azurite:3.32.0
     command: "azurite-blob --skipApiVersionCheck --loose --blobHost 0.0.0.0"
+    labels:
+      com.docker.compose.pay.role: ffc-pay-responses-azurite
