--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-pay-responses",
-  "version": "1.10.7",
+  "version": "1.10.8",
   "description": "FFC payment response processing",
   "homepage": "https://github.com/DEFRA/ffc-pay-responses",
   "main": "app/index.js",
@@ -19,7 +19,8 @@
     "Steve Dickinson steve.dickinson@defra.gov.uk",
     "Marc Templeton m.templeton@kainos.com",
     "Kirsten Williamson kirsten.williamson@kainos.com",
-    "Sam Plackett samuel.plackett@eviden.com"
+    "Sam Plackett samuel.plackett@eviden.com",
+    "Leigh Godson leigh.godson.external@eviden.com"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
