group imps acknowledgement data

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       MESSAGE_QUEUE_USER: ${MESSAGE_QUEUE_USER}
       PAYMENTSUBMIT_TOPIC_ADDRESS: ${PAYMENTSUBMIT_TOPIC_ADDRESS:-ffc-pay-submit}${MESSAGE_QUEUE_SUFFIX}
       PAYMENTSUBMIT_SUBSCRIPTION_ADDRESS: ${PAYMENTSUBMIT_SUBSCRIPTION_ADDRESS:-ffc-pay-responses}${MESSAGE_QUEUE_SUFFIX}
+      COLLECTIONSIZE_TOPIC_ADDRESS: ${COLLECTIONSIZE_TOPIC_ADDRESS:-ffc-pay-collection-size}${MESSAGE_QUEUE_SUFFIX}
+      COLLECTIONSIZE_SUBSCRIPTION_ADDRESS: ${COLLECTIONSIZE_SUBSCRIPTION_ADDRESS:-ffc-pay-responses}${MESSAGE_QUEUE_SUFFIX}
       ACKNOWLEDGEMENT_TOPIC_ADDRESS: ${ACKNOWLEDGEMENT_TOPIC_ADDRESS:-ffc-pay-acknowledgement}${MESSAGE_QUEUE_SUFFIX}
       RETURN_TOPIC_ADDRESS: ${RETURN_TOPIC_ADDRESS:-ffc-pay-return}${MESSAGE_QUEUE_SUFFIX}
       EVENT_TOPIC_ADDRESS: ${EVENT_TOPIC_ADDRESS:-ffc-pay-event}${MESSAGE_QUEUE_SUFFIX}
